cisco vlan, rstp, hsrp, server connection, ping checks

--- a/thesis.tex
+++ b/thesis.tex
@@ -1841,7 +1841,7 @@ DNS-сервер, облегчая его настройку.
 
 \subsection{Планирование политик управления пользователями}
 Планирование политик управления пользователями является ключевым элементом для 
-обеспечения безопасности и упорядоченности процессов . 
+обеспечения безопасности и упорядоченности процессов. 
 В данном контексте рассматривается развертывание программного обеспечения 
 FreeIPA, которое представляет собой интегрированную систему управления идентификацией, 
 политиками и информацией о пользователях.
@@ -1849,13 +1849,452 @@ FreeIPA, которое представляет собой интегриров
 Главные характеристики FreeIPA
 \begin{itemize}
         \item Интегрированное решение для управления информацией о безопасности, 
-        сочетающее в себе Linux (Fedora), сервер каталогов 389, MIT Kerberos, 
+        сочетающее в себе сервер каталогов 389, MIT Kerberos, 
         NTP, DNS, систему сертификатов Dogtag, SSSD и другие компоненты.
-
         \item Основан на Open source проектах и стандартных протоколах
         \item Сильный акцент на простоте управления и автоматизации задач по установке и настройке.
 \end{itemize}
 
+Далее будут кратко описаны основные особенности инсталляции и работы с программным обеспечением FreeIPA. 
+Платформа В настоящее время платформа может быть развернута на базе следующих основных операционных систем: 
+Fedora и Red Gat Enterprise Linux, а также другие дистрибутивы ОС Linux, работающие на базе пакетов .rpm. 
+В официальной документации упомянуто, что данное программное обеспечение требует много дополнительных 
+пакетов, поэтому для тестирования рекомендуется его разворачивать с использованием виртуальной машины. 
+А также следует выполнить минимальные требования для развертывания платформы: 
+\begin{enumerate}
+        \item Объем оперативной памяти: 
+        минимальный объем оперативной памяти для установки с центром сертификации 1,2 Гб, 2 ГБ 
+        рекомендуются для тестовых/демо систем. 
+        \item Статическое имя хоста: аутентификация протокола Kerberos основана на 
+        статическом имени хоста, если имя хоста изменится, аутентификация Kerberos может прерваться. 
+        Таким образом, тестирующая машина не должна использовать динамически настраиваемое имя хоста, 
+        а скорее статическое, настроенное в /etc/hostname. 
+        \item Правила для DNS: правильно настроенный DNS является краеугольным камнем работающей системы FreeIPA. 
+        Без правильно работающей конфигурации DNS Kerberos и SSL не будут работать должным образом или вообще не будут работать. 
+        Установщик IPA довольно придирчив к конфигурации DNS. Установщик выполняет следующие проверки: 
+        \begin{itemize}
+                \item Имя хоста не может быть localhost или localhost6;
+                \item Имя хоста должно быть полным (ipa.gostev.test); 
+                \item Имя хоста должно быть разрешимым;
+                \item Обратный адрес, к которому он преобразуется, должен совпадать с именем хоста; 
+
+        \end{itemize}
+\end{enumerate}
+
+Установка FreeIPA должна содержать стабильные версии пакетов из стабильных репозиториев.
+Версия, развертываемая на сервере, представлена на Рисунке \ref{fig:freeipa_server_version}. 
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.4]{freeipa_server_version.png}
+        \caption{Версия пакета FreeIPA-server}
+        \label{fig:freeipa_server_version}
+\end{figure}
+
+Также, порты, которые использует IPA, необходимо будет 
+открыть, чтобы удаленные клиенты или дополнительные мастера IPA могли подключаться. 
+Fedora поставляется с двумя предопределенными правилами обслуживания для FreeIPA. 
+Один открывает Kerberos, HTTP, HTTPS, DNS, NTP и LDAP, другой - тот же набор с LDAPS вместо LDAP. 
+Использование данных команд представлено в Листинге \ref{lst:firewall_settings}. 
+\begin{lstlisting}[caption={Команды брандмауэра\label{lst:firewall_settings}}]
+firewall-cmd --add-service=freeipa-ldap --add-service=freeipa-ldaps 
+firewall-cmd --add-service=freeipa-ldap --add-service=freeipa-ldaps permanent 
+\end{lstlisting}
+
+
+\subsection{Планирование внедрения DHCP-сервера}
+Планирования внедрения DHCP-сервера включает в себя планирование 
+диапазонов адресов и подсетей с конкретными автоматизированными рабочими местами.
+DHCP развертывается в качестве сервиса на сервере. 
+конфигурация, рассылаемая сервером, содержит IP-адрес и шлюз по умолчанию.
+Планирование выделения адресов представлено в Таблице \ref{table:dhcp_plan}.
+
+\begin{table}[H]
+\centering
+\small
+\caption{Результат планирования распределения DHCP конфигурации по отделам}
+\label{table:dhcp_plan}
+\begin{tabular}{|l|l|m{2.5cm}|m{2.5cm}|}
+\hline
+\textbf{Сегмент сети} & \textbf{Диапазон адресов} & \textbf{Шлюз по умолчанию} & \textbf{DNS сервер}\\
+\hline
+192.168.2.0/24 & 192.168.2.2 - 192.168.2.3 & 192.168.2.254  & 192.168.11.2\\
+\hline
+192.168.3.0/24 & 192.168.3.2 - 192.168.3.4 & 192.168.3.254 & 192.168.11.2\\
+\hline
+192.168.4.0/24 & 192.168.4.2 - 192.168.4.11 & 192.168.4.254 & 192.168.11.2\\
+\hline
+192.168.5.0/24 & 192.168.5.2 - 192.168.5.21 & 192.168.5.254 & 192.168.11.2\\
+\hline
+192.168.6.0/24 & 192.168.6.2 - 192.168.6.31 & 192.168.6.254 & 192.168.11.2\\
+\hline
+192.168.7.0/24 & 192.168.7.2 - 192.168.7.56 & 192.168.7.254 & 192.168.11.2\\
+\hline
+192.168.8.0/24 & 192.168.8.2 - 192.168.8.3 & 192.168.8.254 & 192.168.11.2\\
+\hline
+192.168.9.0/24 & 192.168.9.2 - 192.168.9.21 & 192.168.9.254 & 192.168.11.2 \\
+\hline
+192.168.10.0/24 & 192.168.10.2 - 192.168.10.46 & 192.168.10.254 & 192.168.11.2\\
+\hline
+\end{tabular}
+\end{table}
+
+
+Конечный набор параметров и их значения в рамках планирования
+DHCP-сервера представлены в Таблице \ref{table:dhcp_plan_parameters}.
+
+\begin{table}[H]
+\centering
+\small
+\caption{Результат планирования параметров DHCP-сервера}
+\label{table:dhcp_plan_parameters}
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Название параметра} & \textbf{Значение параметра} \\
+\hline
+Стандартное время аренды & 6000 секунд \\
+\hline
+Максимальное время аренды & 7200 секунд \\
+\hline
+\end{tabular}
+\end{table}
+
+Стоит также упомянуть, что при разворачивании DHCP отдельно на сервере, требуется настройка DHCP-relay. 
+Этот компонент перенаправляет запросы DHCP от клиентов через сетевые устройства, 
+такие как маршрутизаторы и коммутаторы, к серверу DHCP. DHCP-relay необходим для 
+обеспечения того, чтобы клиенты могли получать IP-конфигурацию в сетевых 
+архитектурах с множественными подсетями, где прямой широковещательный трафик между 
+подсетями ограничен или невозможен из-за разграничений маршрутизации.
+
+
+
+
+
+\subsection{Планирование других сетевых служб}
+В данном разделе производится планирование других сетевых служб, 
+планирование которых не вынесено в отдельный подраздел, в 
+том числе вебслужба, файловая служба, служба времени. 
+
+Служба времени разворачивается как компонент пакета FreeIPA и находится в домене
+ntp зоны gostev.test. Служба времени для сервера реализована в качестве демона -- chronyd, и
+сервиса chronyc для клиента.
+
+Файловая служба развертывается в качестве iSCSI решения. Для каждого пользователя необходимо
+создать отдельный диск размеров не менее 10 ГБ.
+
+
+\subsection{Определение и расчет сервисной нагрузки}
+В этом разделе необходимо оценить нагрузку на сервер, обеспечивающих различные информационные и сетевые сервисы. 
+Это включает в себя анализ медианных и пиковых значений количества запросов к каждому сервису за различные временные промежутки 
+(например, в течение рабочего дня или смены, а также в расчете на секунду, если это необходимо). 
+Необходимо определить объем данных, передаваемых в одной транзакции или запросе, 
+учитывая специфику прикладных протоколов, используемых каждым сервисом. 
+Этот анализ поможет понять и оценить требования к пропускной способности сервера, 
+что является ключевым фактором для обеспечения их эффективной и бесперебойной работы.
+Вычисления производятся с использованием программного обеспечения -- Wireshark.
+
+Далее представлен расчет нагрузки для службы времени -- NTP. На Рисунке \ref{fig:wireshark_ntp_dump} видно, что
+транзакция состоит из запроса к серверу и его ответа клиенту, транзакция повторяется
+раз в минуту.
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.5]{ntp_wireshark_dump.png}
+        \caption{Анализ трафика службы времени}
+        \label{fig:wireshark_ntp_dump}
+\end{figure}
+
+При анализе данной транзакции было определено: количество пакетов в одной транзакции 2, максимальный размер пакета 736 бит.
+В итоге объем одной транзакции равен (Формула \ref{formula:trans})
+\begin{equation}
+        \label{formula:trans}
+        V_\text{транзакции} = 736 * 2 = 1472 \; \text{бит} \approx 0.002 \; \text{Мбит}
+\end{equation}
+
+Количество обращений к службе времене представлено в Таблице \ref{table:ntp_requests}.
+\begin{table}[H]
+\centering
+\small
+\caption{Количество обращений к службе времени}
+\label{table:ntp_requests}
+\begin{tabular}{|m{3cm}|m{3cm}|m{4cm}|m{3cm}|}
+\hline
+\textbf{Отдел} & \textbf{Количество АРМ} & \textbf{Количество обращений (транзакций) за рабочий день, шт } & \textbf{Всего пакетов за рабочий день, шт }\\
+\hline
+Руководство предприятия & 1 & 480 & 960 \\
+\hline
+Коммерческий отдел & 3 & 1440 & 2880 \\
+\hline
+Бухгалтерия & 10 & 4800 & 9600 \\
+\hline
+Отдел кадров & 20 & 9600 & 19200 \\
+\hline
+Отдел закупок & 30 & 14400 & 28800 \\
+\hline
+Отдел продаж & 55 & 26400 & 52800 \\
+\hline
+АХО & 2 & 960 & 1920 \\
+\hline
+ИТ-департамент & 20 & 9600 & 19200 \\
+\hline
+Профильные отделы & 45 & 22080 & 44160 \\
+\hline
+Итого & - & 94080 & 188160 \\
+\hline
+\end{tabular}
+\end{table}
+
+В итоге за 8-часовой рабочий день формируется примерно 94080 транзакций для службы времени, что примерно равно 
+3 транзакции в секунду, что примерно равно 0.006 Мбит/с. Это значит, что на интерфейс коммутатора только от 
+службы времени будет поступать как минимум 0.006 Мбит/с трафика или с учетом расчета количества пакетов – 6.5 пакета в секунду.
+
+
+Следующим представлен расчет нагрузки для службы DNS. На Рисунке \ref{fig:wireshark_dns_dump} видно, что 
+транзакция состоит из запроса к серверу и его ответа клиенту,
+максимальный размер пакета 1048 бит, объем транзакции 2 пакета.
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.4]{dns_wireshark.png}
+        \caption{Анализ трафика службы DNS}
+        \label{fig:wireshark_dns_dump}
+\end{figure}
+
+В итоге объем одной транзакции равен (Формула \ref{formula:dns_trans})
+\begin{equation}
+        \label{formula:dns_trans}
+        V_\text{транзакции} = 1048 * 2 = 2096 \; \text{бит} \approx 0.002 \; \text{Мбит}
+\end{equation}
+
+
+Количество обращений к службе DNS представлено в Таблице \ref{table:dns_requests}.
+\begin{table}[H]
+\centering
+\small
+\caption{Количество обращений к службе DNS}
+\label{table:dns_requests}
+\begin{tabular}{|m{3cm}|m{3cm}|m{4cm}|m{3cm}|}
+\hline
+\textbf{Отдел} & \textbf{Количество АРМ} & \textbf{Количество обращений (транзакций) за рабочий день, шт } & \textbf{Всего пакетов за рабочий день, шт }\\
+\hline
+Руководство предприятия & 1 & 2400 & 4800 \\
+\hline
+Коммерческий отдел & 3 & 7200 & 14400 \\
+\hline
+Бухгалтерия & 10 & 24000 & 48000 \\
+\hline
+Отдел кадров & 20 & 48000 & 96000 \\
+\hline
+Отдел закупок & 30 & 72000 & 144000 \\
+\hline
+Отдел продаж & 55 & 132000 & 264000 \\
+\hline
+АХО & 2 & 4800 & 9600 \\
+\hline
+ИТ-департамент & 20 & 48000 & 96000 \\
+\hline
+Профильные отделы & 45 & 108000 & 216000 \\
+\hline
+Итого & - & 1346400 & 2692800 \\
+\hline
+\end{tabular}
+\end{table}
+
+В итоге за 8-часовой рабочий день формируется примерно 1346400 транзакций для 
+службы DNS, что примерно равно 
+46 транзакций в секунду, что примерно равно 0.1 Мбит/с. 
+Это значит, что на интерфейс коммутатора только от 
+службы времени будет поступать как минимум 0.1 Мбит/с трафика 
+или с учетом расчета количества пакетов – 93.5 пакета в секунду.
+
+
+Далее представлен расчет нагрзуки для веб службы. На Рисунке 
+\ref{fig:wireshark_web_dump} видно, что транзакция состоит из запроса к DNS,
+TCP handshake, обработки HTTP запроса, закрытия TCP соединения, максимальный
+пакет транзакции 46880 бит, всего пакетов в транзакции 16. На рисунке \ref{fig:wireshark_web_stat_dump}
+изображена полная статистика транзакции, из чего видно, что объем транзакции равен 68544 бит.
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.5]{web_wireshark.png}
+        \caption{Анализ трафика веб службы}
+        \label{fig:wireshark_web_dump}
+\end{figure}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.5]{web_wireshark_stat.png}
+        \caption{Анализ трафика веб службы}
+        \label{fig:wireshark_web_stat_dump}
+\end{figure}
+
+
+
+
+Количество обращений к веб службе представлено в Таблице \ref{table:web_requests}.
+
+\begin{table}[H]
+\centering
+\small
+\caption{Количество обращений к веб службе}
+\label{table:web_requests}
+\begin{tabular}{|m{3cm}|m{3cm}|m{4cm}|m{3cm}|}
+\hline
+\textbf{Отдел} & \textbf{Количество АРМ} & \textbf{Количество обращений (транзакций) за рабочий день, шт } & \textbf{Всего пакетов за рабочий день, шт }\\
+\hline
+Руководство предприятия & 1 & 300 & 4800 \\
+\hline
+Коммерческий отдел & 3 & 7200 & 115200 \\
+\hline
+Бухгалтерия & 10 & 24000 & 384000 \\
+\hline
+Отдел кадров & 20 & 48000 & 768000 \\
+\hline
+Отдел закупок & 30 & 72000 & 1152000\\
+\hline
+Отдел продаж & 55 & 132000 & 2112000 \\
+\hline
+АХО & 2 & 200 & 3200 \\
+\hline
+ИТ-департамент & 20 & 100000 & 1600000 \\
+\hline
+Профильные отделы & 45 & 108000 & 160000 \\
+\hline
+Итого & - & 491700  &  7867200 \\
+\hline
+\end{tabular}
+\end{table}
+
+В итоге за 8-часовой рабочий день формируется примерно 491700 транзакций для 
+веб службы, что примерно равно 
+17 транзакций в секунду, что примерно равно 1 Мбит/с. 
+Это значит, что на интерфейс коммутатора только от 
+веб службы будет поступать как минимум 1 Мбит/с трафика 
+или с учетом расчета количества пакетов – 272 пакета в секунду.
+
+
+Далее представлен расчет нагрузки для службы управления пользователями.
+На Рисунке \ref{fig:wireshark_freeipa_dump} представлена транзакция, состоящия из аутентификации пользователя в домене
+FreeIPA, проверка политик доступа (выполнение команд в привилигированном режиме) и другое.
+На Рисунке \ref{fig:wireshark_freeipa_stats_dump} представлена статистика транзакции. При анализе выяснено, что транзакция состоит
+из 258 пакетов и генерирует 86016 бит трафика, максимальный размер пакета 20448 бит.
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.5]{freeipa_wireshark.png}
+        \caption{Анализ трафика службы управления пользователями}
+        \label{fig:wireshark_freeipa_dump}
+\end{figure}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.5]{freeipa_wireshark_stats.png}
+        \caption{Детали транзакции службы управления пользователями}
+        \label{fig:wireshark_freeipa_stats_dump}
+\end{figure}
+
+Количество обращений к службе управления пользователями представлено в Таблице \ref{table:freeipa_requests}.
+
+\begin{table}[H]
+\centering
+\small
+\caption{Количество обращений к службе управления пользователями}
+\label{table:freeipa_requests}
+\begin{tabular}{|m{3cm}|m{3cm}|m{4cm}|m{3cm}|}
+\hline
+\textbf{Отдел} & \textbf{Количество АРМ} & \textbf{Количество обращений (транзакций) за рабочий день, шт } & \textbf{Всего пакетов за рабочий день, шт }\\
+\hline
+Руководство предприятия & 1 & 300 & 77400 \\
+\hline
+Коммерческий отдел & 3 & 900 & 232200 \\
+\hline
+Бухгалтерия & 10 & 3000 & 774000\\
+\hline
+Отдел кадров & 20 & 6000 & 1548000 \\
+\hline
+Отдел закупок & 30 & 9000 & 2322000\\
+\hline
+Отдел продаж & 55 & 16500 & 4257000 \\
+\hline
+АХО & 2 & 500 & 129000 \\
+\hline
+ИТ-департамент & 20 & 20000 & 5160000 \\
+\hline
+Профильные отделы & 45 & 10000 & 2580000 \\
+\hline
+Итого & - & 66200 & 16950600  \\
+\hline
+\end{tabular}
+\end{table}
+
+В итоге за 8-часовой рабочий день формируется примерно 66200 транзакций для 
+службы управления пользователями, что примерно равно 
+2 транзакций в секунду, что примерно равно 0.2 Мбит/с. 
+Это значит, что на интерфейс коммутатора только от 
+службы управления пользователями будет поступать как минимум 0.2 Мбит/с трафика 
+или с учетом расчета количества пакетов – 582 пакета в секунду.
+
+Далее представлен расчет нагрузки для файловой службы iSCSI. На Рисунке \ref{fig:wireshark_iscsi_dump} 
+представлен общий вид транзакции: клиент манипулирует разными pdf, xml
+файлами размером не больше пяти МБит.
+На Рисунке \ref{fig:wireshark_iscsi_stats_dump} представлена статистика транзакции. Максимальный размер пакета 395680 бит,
+количество пакетов в транзакции 591, объем транзакции равен 3 Мбит.
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.5]{iscsi_wireshark.png}
+        \caption{Анализ трафика файловой службы}
+        \label{fig:wireshark_iscsi_dump}
+\end{figure}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.5]{iscsi_stats_wireshark.png}
+        \caption{Детали транзакции файловой службы}
+        \label{fig:wireshark_iscsi_stats_dump}
+\end{figure}
+
+Количество обращений к веб службе представлено в Таблице \ref{table:iscsi_requests}.
+\begin{table}[H]
+\centering
+\small
+\caption{Количество обращений к файловой службе}
+\label{table:web_requests}
+\begin{tabular}{|m{3cm}|m{3cm}|m{4cm}|m{3cm}|}
+\hline
+\textbf{Отдел} & \textbf{Количество АРМ} & \textbf{Количество обращений (транзакций) за рабочий день, шт } & \textbf{Всего пакетов за рабочий день, шт }\\
+\hline
+Руководство предприятия & 1 & 100 & 59100\\
+\hline
+Коммерческий отдел & 3 & 900 & 53190 \\
+\hline
+Бухгалтерия & 10 & 10000 & 5910000 \\
+\hline
+Отдел кадров & 20 & 1000 & 591000 \\
+\hline
+Отдел закупок & 30 & 3000 & 1773000\\
+\hline
+Отдел продаж & 55 & 10000 & 5910000 \\
+\hline
+АХО & 2 & 20 & 11820 \\
+\hline
+ИТ-департамент & 20 & 5000 &  2955000\\
+\hline
+Профильные отделы & 45 & 5000 & 2955000 \\
+\hline
+Итого & - & 35020 &  20206290 \\
+\hline
+\end{tabular}
+\end{table}
+
+В итоге за 8-часовой рабочий день формируется примерно 35020 транзакций для 
+файловой службы, что примерно равно 
+1.5 транзакций в секунду, что примерно равно 4.5 Мбит/с. 
+Это значит, что на интерфейс коммутатора только от 
+файловой службы будет поступать как минимум 4.5 Мбит/с трафика 
+или с учетом расчета количества пакетов – 702 пакета в секунду.
+
+Таким образом медианное значение максимального размера пакета равно 20448, сумма всех пакетов равна 1655.
+На основе входных данных примера минимальная скорость канала будет равна примерно 40 Мбит/с(Формула \ref{}).
+\begin{equation}
+        V_\text{канала} \ge \frac{20448 * 1655}{0.8}
+\end{equation}
+В итоге можно сделать вывод о том, что канала в 1 Гбит/с хватит для поддержания необходимой пропускной способности и работы сервиса, как было предположено при предварительном планировании прототипа. 
 
 
 \section{Моделирование сети передачи данных}
@@ -1876,7 +2315,7 @@ FreeIPA, которое представляет собой интегриров
 \begin{figure}[H]
         \centering
         \includegraphics[scale=0.6]{vm_installation.png}
-        \caption{Результат установки вирутальных машин}
+        \caption{Результат установки виртуальных машин}
         \label{fig:vm_installation}
 \end{figure}
 
@@ -1944,6 +2383,23 @@ FreeIPA, которое представляет собой интегриров
         \includegraphics[scale=0.8]{services/dhcp/clientproofdhcp.png}
         \caption{Результат получения клиентом конфигурации}
         \label{fig:dhcp_proof}
+\end{figure}
+
+
+Далее представлено развертывание веб службы с использованием nginx. На Рисунке \ref{fig:web_server_cfg} изображена конфигурация сервера.
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.8]{services/web/server_cfg.png}
+        \caption{Конфигурация веб сервера}
+        \label{fig:web_server_cfg}
+\end{figure}
+
+На Рисунке \ref{fig:web_index} изображена главная страница.
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.6]{services/web/index.png}
+        \caption{Главная страница веб сервера}
+        \label{fig:web_index}
 \end{figure}
 
 
