cisco, qos last

--- a/thesis.tex
+++ b/thesis.tex
@@ -1787,7 +1787,7 @@ QoS, или Quality of Service, это набор технологий на се
 \small
 \caption{Значения DSCP для классов и типов трафика}
 \label{table:qos}
-\begin{tabular}{|m{3cm}|m{3cm}|m{3cm}|m{3cm}|}
+\begin{tabular}{|m{3cm}|m{3.5cm}|m{3cm}|m{3cm}|}
 \hline
 \textbf{Класс трафика} & \textbf{Тип трафика} & \textbf{Модель поведения} & \textbf{Значение DSCP} \\
 \hline
@@ -1812,7 +1812,7 @@ QoS, или Quality of Service, это набор технологий на се
 DNS-сервер для предприятия развернут в рамках программного
 обеспечения FreeIPA (Free Identity, Policy, Audit), обеспечивая интегрированный
 DNS-сервер, облегчая его настройку.
-Результаты планирование DNS представлены в Таблице \ref{fig:dns_plan}
+Результаты планирования DNS представлены в Таблице \ref{table:dns_plan}
 
 \begin{table}[H]
 \centering
@@ -1979,7 +1979,7 @@ ntp зоны gostev.test. Служба времени для сервера ре
 сервиса chronyc для клиента.
 
 Файловая служба развертывается в качестве iSCSI решения. Для каждого пользователя необходимо
-создать отдельный диск размеров не менее 10 ГБ.
+создать отдельный диск размером не менее 10 ГБ.
 
 
 \subsection{Определение и расчет сервисной нагрузки}
@@ -2257,7 +2257,7 @@ FreeIPA, проверка политик доступа (выполнение к
 2 транзакций в секунду, 1256 пакетов в секунду.
 
 Таким образом медианное значение максимального размера файлового пакета равно 20448, сумма всех пакетов равна 2176.
-На основе входных данных примера минимальная скорость канала будет равна примерно 53 Мбит/с(Формула \ref{formula:v_channel}).
+На основе входных данных минимальная скорость канала будет равна примерно 53 Мбит/с(Формула \ref{formula:v_channel}).
 \begin{equation}
         V_\text{канала} \ge \frac{20448 * 2176}{0.8}
         \label{formula:v_channel}
@@ -2464,7 +2464,7 @@ FreeIPA, проверка политик доступа (выполнение к
 \sloppy
 %\raggedright
 %\nocite{*} print everything
-\printbibliography[title=список используемых источников]\addcontentsline{toc}{section}{список используемых источников}
+\printbibliography[title=СПИСОК ИСПОЛЬЗУЕМЫХ ИСТОЧНИКОВ]\addcontentsline{toc}{section}{СПИСОК ИСПОЛЬЗУЕМЫХ ИСТОЧНИКОВ}
 \endgroup
 
 \end{document}
