--- a/thesis.tex
+++ b/thesis.tex
@@ -1512,11 +1512,21 @@ R\_1\_L3\_GOSTEV & GigabitEthernet0/1-0/2 & SW\_1-2\_L3\_GOSTEV & \multicolumn{1
 \end{tabular}
 \end{table}
 
+При наличии резервных маршрутов в топологии сети канальноко уровня появляются петли, которые могут
+нарушить стабильную работы сети, для предотвращения данной ситуации используются протоколы остовного дерева.
+В данном предприятии будет выбран протокол Rapiv PVST+, который является усовершенствованием стандартного 
+Spanning Tree Protocol (STP) и предлагает ряд значительных преимуществ. Во-первых, Rapid PVST+ обеспечивает 
+более быстрое восстановление сети после изменений в топологии, благодаря уменьшенному времени конвергенции. 
+Во-вторых, он поддерживает создание отдельного spanning tree для каждого VLAN, что повышает гибкость и 
+эффективность управления сетевыми ресурсами. Эти особенности делают Rapid PVST+ особенно подходящим 
+для сетей предприятий, где требуется высокая надежность, масштабируемость и оптимизация производительности."
+В топологии главного здания устройство SW\_1\_L3\_GOSTEV должно быть root bridge для каждой виртуальной локальной сети.
+
 
 
 \subsection{Планирование сети уровня 3}
 В данном разделе необходимо спроектировать распределение IP адрессов.
-a
+
 Планирование адресации для главного здания представлено в Таблице \ref{table:mainDepIpPlan}.
 \begin{table}[H]
 \centering
@@ -1593,6 +1603,77 @@ DHCP
 \end{tabular}
 \end{table}
 
+Для данного предприятия выбрана статическая маршрутизаця в силу простоты структуры каждого объекта
+и топологии сети передачи данных. Планирование маршрутизации для главного здания представлено в 
+Таблице \ref{table:staticRoutePlanmainDep}.
+
+
+\begin{table}[H]
+\centering
+\small
+\caption{Планирование статической маршрутизации для главного здания}
+\label{table:staticRoutePlanmainDep}
+\begin{tabular}{|m{4cm}|m{3cm}|m{4cm}|m{4cm}|}
+\hline
+\textbf{Исходящий интерфейс} & \textbf{Сеть назначения/ префикс сети} & \textbf{Следующий узел} & \textbf{Предпочтение}\\ \hline
+192.168.110.3 & 192.168.2.0/24 & 192.168.110.2 & По умолчанию \\ \hline
+192.168.112.3 & 192.168.2.0/24 & 192.168.112.2 & 200 \\ \hline
+192.168.110.3 & 192.168.3.0/24 & 192.168.110.2 & По умолчанию \\ \hline
+192.168.112.3 & 192.168.3.0/24 & 192.168.112.2 & 200 \\ \hline
+192.168.110.3 & 192.168.4.0/24 & 192.168.110.2 & По умолчанию \\ \hline
+192.168.112.3 & 192.168.4.0/24 & 192.168.112.2 & 200 \\ \hline
+192.168.110.3 & 192.168.5.0/24 & 192.168.110.2 & По умолчанию \\ \hline
+192.168.112.3 & 192.168.5.0/24 & 192.168.112.2 & 200 \\ \hline
+192.168.110.3 & 192.168.6.0/24 & 192.168.110.2 & По умолчанию \\ \hline
+192.168.112.3 & 192.168.6.0/24 & 192.168.112.2 & 200 \\ \hline
+192.168.110.3 & 192.168.7.0/24 & 192.168.110.2 & По умолчанию \\ \hline
+192.168.112.3 & 192.168.7.0/24 & 192.168.112.2 & 200 \\ \hline
+192.168.110.3 & 192.168.8.0/24 & 192.168.110.2 & По умолчанию \\ \hline
+192.168.112.3 & 192.168.8.0/24 & 192.168.112.2 & 200 \\ \hline
+192.168.110.3 & 192.168.9.0/24 & 192.168.110.2 & По умолчанию \\ \hline
+192.168.112.3 & 192.168.9.0/24 & 192.168.112.2 & 200 \\ \hline
+192.168.110.3 & 192.168.10.0/24 & 192.168.110.2 & По умолчанию \\ \hline
+192.168.112.3 & 192.168.10.0/24 & 192.168.112.2 & 200 \\ \hline
+192.168.111.3 & 192.168.11.0/24 & 192.168.111.2 & По умолчанию \\ \hline
+\end{tabular}
+\end{table}
+
+В главном здании реализован протокол HSRP, целью которого является достижение почти полной 
+доступности и отказоустойчивости первого хопа. Детали планирования использования HSRP представлены в Таблице \ref{table:hsrp_plan_mainDep}.
+
+
+\newpage
+\begin{table}[H]
+\centering
+\small
+\caption{Планирование использования HSRP}
+\label{table:hsrp_plan_mainDep}
+\begin{tabular}{|m{4cm}|m{2cm}|m{4cm}|m{4cm}|}
+\hline
+\textbf{Устройство} & \textbf{Группа} & \textbf{Виртуальный адрес} & \textbf{Дополнительный настройки}\\ \hline
+SW\_1\_L3\_GOSTEV & 2 & 192.168.2.254 & Автоматическое перехватывание роли, приоритет 105 \\ \hline
+SW\_1\_L3\_GOSTEV & 3 & 192.168.3.254 & Автоматическое перехватывание роли, приоритет 105 \\ \hline
+SW\_1\_L3\_GOSTEV & 4 & 192.168.4.254 & Автоматическое перехватывание роли, приоритет 105 \\ \hline
+SW\_1\_L3\_GOSTEV & 5 & 192.168.5.254 & Автоматическое перехватывание роли, приоритет 105 \\ \hline
+SW\_1\_L3\_GOSTEV & 6 & 192.168.6.254 & Автоматическое перехватывание роли, приоритет 105 \\ \hline
+SW\_1\_L3\_GOSTEV & 7 & 192.168.7.254 & Автоматическое перехватывание роли, приоритет 105 \\ \hline
+SW\_1\_L3\_GOSTEV & 8 & 192.168.8.254 & Автоматическое перехватывание роли, приоритет 105 \\ \hline
+SW\_1\_L3\_GOSTEV & 9 & 192.168.9.254 & Автоматическое перехватывание роли, приоритет 105 \\ \hline
+SW\_1\_L3\_GOSTEV & 10 & 192.168.10.254 & Автоматическое перехватывание роли, приоритет 105 \\ \hline
+
+SW\_2\_L3\_GOSTEV & 2 & 192.168.2.254 & - \\ \hline
+SW\_2\_L3\_GOSTEV & 3 & 192.168.3.254 & - \\ \hline
+SW\_2\_L3\_GOSTEV & 4 & 192.168.4.254 & - \\ \hline
+SW\_2\_L3\_GOSTEV & 5 & 192.168.5.254 & - \\ \hline
+SW\_2\_L3\_GOSTEV & 6 & 192.168.6.254 & - \\ \hline
+SW\_2\_L3\_GOSTEV & 7 & 192.168.7.254 & - \\ \hline
+SW\_2\_L3\_GOSTEV & 8 & 192.168.8.254 & - \\ \hline
+SW\_2\_L3\_GOSTEV & 9 & 192.168.9.254 & - \\ \hline
+SW\_2\_L3\_GOSTEV & 10 & 192.168.10.254 & - \\ \hline
+
+\hline
+\end{tabular}
+\end{table}
 
 Планирование адресации для филиала представлено в Таблице \ref{table:filialIpPlan}.
 \begin{table}[H]
@@ -1662,6 +1743,8 @@ DHCP
 \end{tabular}
 \end{table}
 
+Настройка статической маршрутизации для филиала аналогична настройке главного здания.
+
 
 Планирование адресации для точки присутствия представлено в Таблице \ref{table:tpIpPlan}.
 \begin{table}[H]
@@ -1708,6 +1791,9 @@ DHCP
 \end{tabular}
 \end{table}
 
+Настройка статической маршрутизации для точки присутствия аналогична настройке главного здания, но с отстутствием резервных маршрутов.
+
+
 
 Планирование адресации для склада представлено в Таблице \ref{table:warehouseIpPlan}.
 \begin{table}[H]
@@ -1731,6 +1817,36 @@ DHCP
 \\ \hline
 \end{tabular}
 \end{table}
+
+План режима распределения IP адресов для склада представлен в Таблице \ref{table:warehouseDistributionPlan}.
+
+\begin{table}[H]
+\centering
+\small
+\caption{Планирование режима распределения IP адресов для склада}
+\label{table:warehouseDistributionPlan}
+\begin{tabular}{|p{4cm}|p{3cm}|p{8cm}|}
+\hline
+\textbf{Сегмент/Интерфейс IP-сети } & \textbf{Режим распределения} & \textbf{Описание режима распределения} 
+\\ \hline
+192.168.2.0/24 \newline
+192.168.3.0/24 \newline
+192.168.4.0/24 \newline
+192.168.5.0/24 \newline
+&
+DHCP
+&
+Распределяется маршрутизатором уровня агрегации. 
+\\ \hline
+192.168.100.0/24 & Статический & Статически настроенные IP-адреса управления устройством 
+\\ \hline
+\end{tabular}
+\end{table}
+
+Настройка статической маршрутизации для склада аналогична настройке главного здания, но с отстутствием резервных маршрутов.
+
+
+
 
 
 
@@ -2255,6 +2371,58 @@ FreeIPA, проверка политик доступа (выполнение к
 В итоге за 8-часовой рабочий день формируется примерно 61220 транзакций для 
 файловой службы, что примерно равно 
 2 транзакций в секунду, 1256 пакетов в секунду.
+
+Далее представлен расчет нагрузки для службы DHCP. На Рисунке \ref{fig:wireshark_dhcp_dump} видно, что транзакция состоит из двух пакетов,
+максимальный размер пакета 2752 бита.
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.5]{dhcp_wireshark.png}
+        \caption{Анализ трафика службы DHCP}
+        \label{fig:wireshark_dhcp_dump}
+\end{figure}
+
+DHCP-сервер сконфигурирован со следующими параметрами: 
+время аренды по умолчанию – 6000, максимальное время аренды – 7200.
+В Таблице \ref{table:dhcp_requests} представлено количество обращений к службе DHCP. 
+
+
+Количество обращений к файловой службе представлено в Таблице \ref{table:iscsi_requests}.
+\begin{table}[H]
+\centering
+\small
+\caption{Количество обращений к файловой службе}
+\label{table:dhcp_requests}
+\begin{tabular}{|m{3cm}|m{3cm}|m{4cm}|m{3cm}|}
+\hline
+\textbf{Отдел} & \textbf{Количество АРМ} & \textbf{Количество обращений (транзакций) за рабочий день, шт } & \textbf{Всего пакетов за рабочий день, шт }\\
+\hline
+Руководство предприятия & 1 & 10 & 20\\
+\hline
+Коммерческий отдел & 3 & 30 & 60 \\
+\hline
+Бухгалтерия & 10 & 100 & 200\\
+\hline
+Отдел кадров & 20 & 200 & 400\\
+\hline
+Отдел закупок & 30 & 300 & 600\\
+\hline
+Отдел продаж & 55 & 550 & 1100\\
+\hline
+АХО & 2 & 20 & 40\\
+\hline
+ИТ-департамент & 20 & 200 & 400\\
+\hline
+Профильные отделы & 45 & 450 & 900\\
+\hline
+Итого & - & 1860 & 3720\\
+\hline
+\end{tabular}
+\end{table}
+
+В итоге за 8 часовой день формируется примерно 1860 транзакций,
+0.06 транзакции в секунду, 0.12 пакетов в секунду.
+
 
 Таким образом медианное значение максимального размера файлового пакета равно 20448, сумма всех пакетов равна 2176.
 На основе входных данных минимальная скорость канала будет равна примерно 53 Мбит/с(Формула \ref{formula:v_channel}).
