--- a/thesis.bib
+++ b/thesis.bib
@@ -7,3 +7,56 @@
   pages={149--156},
   year={2019}
 }
+
+@book{davis2007aris,
+  title={ARIS design platform: getting started with BPM},
+  author={Davis, Rob and Brabander, Eric},
+  year={2007},
+  publisher={Springer Science \& Business Media}
+}
+
+@misc{olifer,
+  title={Компьютерные сети},
+  author={Олифер, Виктор and Олифер, Наталия and Олифер, В and Олифер, Н},
+  year={2010},
+  publisher={Олифер В.}
+}
+
+@online{habrp-rstp,
+title={Rapid STP},
+journal={Хабр},
+url={https://habr.com/ru/companies/cbs/articles/330358/},
+urldate={2023-12-29}
+}
+
+@online{habrp-wireshark,
+title={Wireshark — подробное руководство по началу использования},
+journal={Хабр},
+url={https://habr.com/ru/articles/735866/},
+urldate={2023-12-29}
+}
+
+@online{freeipa,
+title={Документация к FreeIPA},
+url={https://www.freeipa.org/},
+urldate={2023-12-29}
+}
+
+@online{qos,
+title={Qos},
+url={https://www.calltouch.ru/blog/glossary/qos/},
+urldate={2023-12-29}
+}
+
+@online{vlan,
+title={Технология VLAN},
+url={https://moxa.ru/tehnologii/ethernet_network/rstp/},
+urldate={2023-12-29}
+}
+
+@book{calc,
+  title={Коммуникационные сети: краткое введение},
+  author={Вальран, and Парех},
+  year={2022},
+  publisher={ДМК Пресс}
+}
